# category-theory-notes

./: .travis.yml  CHANGELOG.md  README.md  ct-notes.cabal  package.yaml  stack.yaml
src/: CtNotes.hs
src/PartOne/ADTs/: Notes.hs
src/PartOne/CategoriesGreatAndSmall/: Notes.hs
src/PartOne/Category/: Notes.hs
src/PartOne/Functors/: Notes.hs
src/PartOne/KleisliCategories/: Notes.hs
src/PartOne/ProductsAndCategories/: Notes.hs
src/PartOne/TypesAndFunctions/: Notes.hs
